typescript/checker/tests/conformance/expressions/typeGuards/typeGuardsInForStatement.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            8,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInForStatement.ts:1:5
  |
1 | let cond: boolean;
  |     ^^^^

